--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 log = "0.4.17"
 log4rs = "1.1.1"
+serde = "1.0.145"
+serde_derive = "1.0.145"
+serde_json = "1.0.85"
